# vgNoise

./: ARCHIVOS_CREADOS.md  PATHFINDING_IMPLEMENTATION_SUMMARY.md  README.md  RESUMEN_FINAL.md  _test_inventory.py  demo_pathfinding.py  ejemplos_pathfinding.py  melkart.db  pyproject.toml  run_pygame_test.sh  test_camera.py  test_pathfinding_quick.py
configs/: config.json  world_configs.toml
src/: my_prompts.md
src/core/: __init__.py
src/core/camera/: __init__.py  camera.py
src/core/character/: base.py  movement_component.py  shape.py
src/core/entity_stats/: __init__.py  entity_health.py  entity_hunger.py  entity_stamina.py  entity_stat.py
src/game/: pygame_test.py
src/tilemap/: __init__.py  tilemap.py
src/ui/: __init__.py  widget.py
src/vgNoise.egg-info/: SOURCES.txt
src/vgmath/: __init__.py
src/vgnoise/: __init__.py  kernels.py  simplexsmooth2d.py  value2d.py  valuecubic2d.py
src/virigir_math_utilities/: __init__.py
ui_tools/vgNoiseViewer/: README_TILEMAP_EDITOR.md
vgNoiseViewer/: README.md  README_MATRIX_EDITOR.md  __init__.py  app.py  noise_factory.py  noise_preset.noise.json  run_matrix_editor.py  run_noise_viewer.py  test_app.py
vgNoiseViewer/core/: __init__.py  config.py  image_viewer.py  theme.py
vgNoiseViewer/matrix_editor/: __init__.py  app.py  config.py  filter_panel.py  image_utils.py  noise_dialog.py
vgNoiseViewer/noise_viewer/: __init__.py  app.py  factory.py  image_utils.py
vgNoiseViewer/tests/: __init__.py  test_matrix_editor.py  test_noise_viewer.py
vgNoiseViewer/widgets/: __init__.py  common.py  matrix_widgets.py
(+66 files in other folders)
